force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/NEPA_Permit_Type_Catalog__mdt.object-meta.xml
<CustomObject>
    <description>Lookup table mapping canonical permit label strings (as they appear in NEPA_Permit_Matrix__mdt Required_Permits__c) to structured RegulatoryAuthorizationType field values. Used by NEPA_Permit_Record_Creator to create nepa_required_permit__c child records with accurate agency, citation, critical-path flag, and SLA data. One record per distinct federal permit or authorization type.</description>
    <label>NEPA Permit Type Catalog</label>
    <pluralLabel>NEPA Permit Type Catalog</pluralLabel>
</CustomObject>