force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>When false, this catalog record is excluded from permit record creation. Allows deprecating a permit type without deleting the CMT record or disrupting historical permit records.</description>
    <inlineHelpText>Uncheck to exclude this permit type from automatic permit record creation.</inlineHelpText>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>