force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/Canonical_Name__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Name__c</fullName>
    <description>The exact label string used in NEPA_Permit_Matrix__mdt Required_Permits__c semicolon lists. NEPA_Permit_Record_Creator splits those strings on semicolons and queries this field to find the matching catalog record. Must match exactly — case-sensitive.</description>
    <inlineHelpText>Exact permit label as it appears in NEPA_Permit_Matrix Required_Permits__c (e.g., "CWA Section 404 Permit").</inlineHelpText>
    <label>Canonical Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>