force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/GIS_Layer_Key__c.field-meta.xml
<CustomField>
    <fullName>GIS_Layer_Key__c</fullName>
    <description>NEPA_GIS_Layer__mdt DeveloperName key that, when a positive spatial intersection is detected, causes this permit type to be included in the permit record collection regardless of sector/project-type match. Used by NEPA_Permit_Record_Creator GIS bridge. Example: NWI_WETLANDS triggers CWA Section 404 Permit; EPA_TRIBAL_LANDS triggers NHPA Section 106 Consultation.</description>
    <inlineHelpText>GIS layer key (NEPA_GIS_Layer__mdt DeveloperName) that auto-triggers this permit when spatial intersection is detected.</inlineHelpText>
    <label>GIS Layer Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>