force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/Is_Critical_Path__c.field-meta.xml
<CustomField>
    <fullName>Is_Critical_Path__c</fullName>
    <description>True when this permit type is on the critical path — i.e., its absence or delay would block ROD/FONSI issuance. Populated into nepa_required_permit__c.nepa_is_critical_path__c at record creation. Critical-path permits feed nepa_blocked_permit_count__c rollup and the permit gap litigation risk penalty.</description>
    <inlineHelpText>Check if this permit type is typically critical-path (blocks ROD/FONSI if not issued).</inlineHelpText>
    <label>Is Critical Path</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>