force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/Lead_Agency__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agency__c</fullName>
    <description>Federal agency that issues or administers this permit type (e.g., USACE, USFWS, EPA). Populated into nepa_required_permit__c.nepa_lead_agency__c when a permit record is created.</description>
    <inlineHelpText>Federal agency that issues this permit (e.g., USACE, USFWS, EPA, FERC).</inlineHelpText>
    <label>Lead Agency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>