force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/RA_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>RA_Type_Name__c</fullName>
    <description>The Name value of the corresponding RegulatoryAuthorizationType record in org. NEPA_Permit_Record_Creator queries RegulatoryAuthorizationType WHERE Name = this value to get the Id for nepa_required_permit__c.nepa_permit_type__c lookup. Must match RegulatoryAuthorizationType.Name exactly after deploy and data load.</description>
    <inlineHelpText>Exact Name of the matching RegulatoryAuthorizationType record (used by NEPA_Permit_Record_Creator to set the nepa_permit_type__c lookup field).</inlineHelpText>
    <label>RA Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>