force-app/main/default/objects/NEPA_Permit_Type_Catalog__mdt/fields/Regulatory_Citation__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Citation__c</fullName>
    <description>Primary statutory or CFR citation for this permit type (e.g., "33 U.S.C. § 1344; 33 CFR Part 323"). Populated into nepa_required_permit__c.nepa_regulatory_citation__c at record creation.</description>
    <inlineHelpText>Primary statutory or CFR citation (e.g., 33 U.S.C. § 1344; 33 CFR Part 323).</inlineHelpText>
    <label>Regulatory Citation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>